--- a/iGovApi.dproj
+++ b/iGovApi.dproj
@@ -82,10 +82,11 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="rtl.dcp"/>
-        <DCCReference Include="iGov.Client.pas"/>
+        <DCCReference Include="iGov.Client.ASync.pas"/>
         <DCCReference Include="iGov.Types.Response.pas"/>
         <DCCReference Include="iGov.Types.Request.pas"/>
         <DCCReference Include="iGov.Types.pas"/>
+        <DCCReference Include="iGov.Client.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
